syntax = "proto3";

package protocol;

enum MessageType {
  UNKNOWN_MESSAGE_TYPE = 0;
  SUBSCRIPTION = 1;
  TOPIC = 2;
  OPEN = 3;
  VALIDATION = 4;
  VALIDATION_FAILURE = 5;
  VALIDATION_OK = 6;
}

message MessageHeader {
  MessageType type = 1;
}

message OpenMessage {
  MessageType type = 1;
  string payload = 2;
}

message ValidationMessage {
  MessageType type = 1;
  string encoded_payload = 2;
}

message ValidationOKMessage {
  MessageType type = 1;
  string peer_id = 2;
}

message ValidationFailureMessage {
  MessageType type = 1;
}

message SubscriptionMessage {
  MessageType type = 1;
  repeated string topics = 2;
}

message TopicMessage {
  MessageType type = 1;
  optional string peer_id = 2;
  string topic = 3;
  bytes body = 4;
}
